--- a/Homework_2/index.html
+++ b/Homework_2/index.html
@@ -5,6 +5,7 @@
 	<title>Fitness_Homework_3</title>
 	<link rel="stylesheet" href="css/zero.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
