--- a/Homework_4/index.html
+++ b/Homework_4/index.html
@@ -36,16 +36,16 @@
 			     <div class="main_menu">
 				    <ul class="menu">
 					    <li><a href="#">Главная</a></li>
-					    <li><a href="#">Путишествие</a>
+					    <li><a href="#">Путeшествие <i>&#9660;</i></a>
 					        <ul class="submenu">
-						       <li><a href="#">Путишествие 1</a></li>
-						       <li><a href="#">Путишествие 2</a></li>
-						       <li><a href="#">Путишествие 3</a></li>
-						       <li><a href="#">Путишествие 4</a></li>
-						       <li><a href="#">Путишествие 5</a></li>
+						       <li><a href="#">Путeшествие 1</a></li>
+						       <li><a href="#">Путeшествие 2</a></li>
+						       <li><a href="#">Путeшествие 3</a></li>
+						       <li><a href="#">Путeшествие 4</a></li>
+						       <li><a href="#">Путeшествие 5</a></li>
 					        </ul>
 					    </li>    
-					    <li><a href="#">Услуги</a>
+					    <li><a href="#">Услуги <i>&#9660;</i></a>
 					        <ul class="submenu">
 						       <li><a href="#">Услуги 1</a></li>
 						       <li><a href="#">Услуги 2</a></li>
@@ -54,7 +54,7 @@
 						       <li><a href="#">Услуги 5</a></li>
 					        </ul>
 					    </li>
-					    <li><a href="#">Партнерам</a>
+					    <li><a href="#">Партнерам <i>&#9660;</i></a>
 					        <ul class="submenu">
 						       <li><a href="#">Партнерам 1</a></li>
 						       <li><a href="#">Партнерам 2</a></li>
@@ -76,9 +76,8 @@
 			    <h1>Новости</h1>
 			    <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
 			</div>
-			<div class="center"></div>
-	    </div> 
-	</div>       
+		</div>  
+	</div>         
 	    <div class="footer">
 			<h4>Copyright(C) asia-holidays.com. 2010</h4>
 		</div>
